--- a/src/components/Link/styles.css
+++ b/src/components/Link/styles.css
@@ -1,4 +1,4 @@
 .link {
-  text-decoration: none;
-  color: var(--tg-theme-link-color);
+  /*text-decoration: none;*/
+  /*color: var(--tg-theme-link-color);*/
 }
